# pi-inline-format

./: .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
.beads/: metadata.json
.github/workflows/: check.yml  publish-npm.yml
.pi/: settings.json
.pi/suggester/: seed.json
.pi/suggester/logs/: events.ndjson
.pi/suggester/sessions/6c360a7c-2f86-46b8-84d9-085235be0b6c/: meta.json  usage.json
.pi/suggester/sessions/efa8eb25-174b-4f1c-ae81-47e0f223ef39/: meta.json  usage.json
.pi/suggester/sessions/efa8eb25-174b-4f1c-ae81-47e0f223ef39/interaction/: 0c0214eb.json  0c885234.json  11bdbd93.json  129268e3.json  1605de6c.json  42428be1.json  45247a81.json  45af19ff.json  47b2ceac.json  52290ce9.json  5e614c07.json  745edc32.json  7c28defc.json  (+9 more)
.ralphi/: config.yaml  prd.json  progress.txt
extensions/: deterministic-provider-core.ts  deterministic-provider.ts  index.ts  rust-cli.ts
rust/: Cargo.toml  rustfmt.toml
rust/src/: lib.rs  main.rs
scripts/: check-ansi-capture-proof.mjs  check-npm-tarball-install.mjs  check-pinned-host-runtime.mjs  ensure-package-source.mjs  run-ansi-capture-proof-smoke.sh  run-deterministic-heredoc-grid-smoke.sh  run-javascript-extended-compare-smoke.sh  run-semantic-highlight-compare-smoke.sh  verify-host-source-upgrade-path.mjs  verify-multilanguage-local-package-proof.mjs
tasks/: prd-inline-heredoc-python.md  prd-normal-flow-color-proof.md  prd-normal-flow-visual-proof.md  prd-thin-pi-wrapper-plus-rust-core-for-inline-heredoc-rendering.md
